# scpi-parser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  api.md  basic.md  conanfile.py  index.md  jenkinsfile  library.json  meson.build  test-parser.c  versions.md
.github/workflows/: main.yml  ubuntu.yml
_api/: SCPI_ChoiceToName.md  SCPI_CmdTag.md  SCPI_CommandNumbers.md  SCPI_DoubleToStr.md  SCPI_ErrorClear.md  SCPI_ErrorCount.md  SCPI_ErrorPop.md  SCPI_ErrorPush.md  SCPI_ErrorTranslate.md  SCPI_ExprChannelListEntry.md  SCPI_ExprNumericListEntry.md  SCPI_ExprNumericListEntryDouble.md  SCPI_ExprNumericListEntryInt.md  SCPI_FloatToStr.md  SCPI_Init.md  SCPI_Input.md  SCPI_Int32ToStr.md  SCPI_Int64ToStr.md  SCPI_IsCmd.md  SCPI_Match.md  SCPI_NumberToStr.md  SCPI_ParamArbitraryBlock.md  SCPI_ParamBool.md  SCPI_ParamChoice.md  SCPI_ParamCopyText.md  SCPI_ParamErrorOccurred.md  SCPI_ParamFloat.md  SCPI_ParamInt32.md  SCPI_ParamInt64.md  SCPI_ParamIsNumber.md  SCPI_ParamIsValid.md  SCPI_ParamNumber.md  SCPI_ParamToFloat.md  SCPI_ParamToInt32.md  SCPI_ParamToInt64.md  SCPI_ParamToUInt32.md  SCPI_ParamToUInt64.md  SCPI_ParamUInt32.md  SCPI_ParamUInt64.md  SCPI_Parse.md  (+67 more)
_basic/: callback.md  code.md  instrument.md  migration.md
_includes/: head.html  sidebar.html
demo/: CMakeLists.txt  README.md  conanfile.py
demo/common/: CMakeLists.txt  scpi-def.c
demo/demo-interactive/: CMakeLists.txt  main.c  scpi-commands.c  scpi-commands.h
demo/demo-interactive-basic/: CMakeLists.txt  main.c  scpi-def.c  scpi-def.h
demo/demo-tcp/: CMakeLists.txt  main.c  scpi-commands.c  scpi-commands.h
examples/: CMakeLists.txt  Makefile  meson.build
examples/common/: CMakeLists.txt  meson.build  scpi-def.c  scpi-def.cpp  scpi-def.h
examples/common-cxx/: CMakeLists.txt  meson.build  scpi-def.h
examples/test-CVI_w_GUI/: .gitignore  TestLibSCPI_GUI.prj  TestLibscpi.h  TestLibscpi.uir  debug.c  debug.h  libscpi.cws  main.c  scpi_user_config.h
examples/test-LwIP-netconn/: scpi_server.c  scpi_server.h
examples/test-arduino/: .gitignore  build-arduino-library.py  scpi-def.cpp  scpi-def.h  scpi_user_config.h  test-arduino.ino  test-arduino.sln
examples/test-arduino/scpi-parser/: library.properties
examples/test-arduino/scpi-parser/src/: .gitignore  scpi-parser.h
examples/test-hmm/: Makefile  build-test  main.c  scpi-def-hmm.c  scpi-def-hmm.h
examples/test-interactive/: CMakeLists.txt  Makefile  main.c  meson.build
examples/test-interactive-cxx/: CMakeLists.txt  Makefile  main.cpp  meson.build
examples/test-parser/: CMakeLists.txt  Makefile  jenkinsfile  main.c  meson.build
examples/test-tcp/: CMakeLists.txt  Makefile  main-cross.c  main-win32.c  main.c  meson.build
examples/test-tcp-srq/: CMakeLists.txt  main.c  meson.build
examples/test-vxi11/: CMakeLists.txt  Makefile  main.c  meson.build  vxi11_xdr.c
libscpi/: CMakeLists.txt  Makefile  exports.def  meson.build
libscpi/inc/: meson.build
libscpi/inc/scpi/: cc.h  config.h  constants.h  debug.h  error.h  expression.h  fifo.h  help.h  ieee488.h  lexer.h  minimal.h  parser.h  scpi.h  scpi_debug.h  scpi_user_config.h  types.h  units.h  utils.h  utils_private.h
libscpi/src/: debug.c  error.c  expression.c  fifo.c  fifo_private.h  help.c  ieee488.c  lexer.c  lexer_private.h  meson.build  minimal.c  parser.c  parser_private.h  scpi.g  scpi_debug.c  units.c  utils.c  utils.h  utils_private.h
libscpi/test/: meson.build  test_fifo.c  test_lexer.c  test_lexer_parser.c  test_lib.c  test_parser.c  test_scpi_utils.c
netbeans/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
netbeans/tests/: test_fifo.c  test_scpi_utils.c
posts/: index.html
scpi/: scpi.c  scpi.h  scpi_debug.c  scpi_debug.h  scpi_error.c  scpi_error.h  scpi_fifo.c  scpi_fifo.h  scpi_ieee488.c  scpi_ieee488.h  scpi_minimal.c  scpi_minimal.h  scpi_parser.c  scpi_parser.h  scpi_types.h  scpi_units.c  scpi_units.h  scpi_utils.c  scpi_utils.h
zephyr/: CMakeLists.txt  module.yml
