cmake_minimum_required(VERSION 3.28)

# Include all example subdirectories
add_subdirectory(common)
add_subdirectory(common-cxx)
add_subdirectory(test-interactive)
add_subdirectory(test-interactive-cxx)
add_subdirectory(test-parser)
add_subdirectory(test-tcp)
add_subdirectory(test-tcp-srq)
add_subdirectory(test-vxi11)
add_subdirectory(test-LwIP-netconn)
add_subdirectory(test-CVI_w_GUI)