inc = include_directories('.')

headers = files([
  'scpi/cc.h',
  'scpi/config.h',
  'scpi/constants.h',
  'scpi/error.h',
  'scpi/expression.h',
  'scpi/ieee488.h',
  'scpi/minimal.h',
  'scpi/parser.h',
  'scpi/scpi.h',
  'scpi/types.h',
  'scpi/units.h',
  'scpi/utils.h',
])

install_headers(headers, subdir: 'scpi')
